<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>de.hechler.patrick.hilfen</groupId>
	<artifactId>checker</artifactId>
	<version>7.0.0</version>
	<packaging>jar</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>17</source>
					<target>17</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>


	<repositories>
		<repository>
			<id>central</id>
			<url>https://repo1.maven.org/maven2/</url>
		</repository>
	</repositories>

	<!-- see: https://blog.sonatype.com/using-nexus-3-as-your-repository-part-1-maven-artifacts -->
	<!-- also see eclipse deploy problem: https://bugs.eclipse.org/bugs/show_bug.cgi?id=566513  -->
	<!--      workaround: in JVM tab define "-Daether.connector.basic.threads=1"                -->
	<distributionManagement>
		<repository>
			<id>patmcsreleases</id>
			<name>PatMCS Maven Repository</name>
			<url>http://nexuspat.hechler.de/repository/maven-releases/</url>
		</repository>
		<snapshotRepository>
			<id>patmcssnapshots</id>
			<name>PatMCS Maven Snapshots</name>
			<url>http://nexuspat.hechler.de/repository/maven-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

</project>
